<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainMenuActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@color/customBlue"
        android:onClick="play"
        android:text="@string/play"
        android:textColor="@color/white"
        android:width="250dp" />

    <Button
        android:id="@+id/createSetButton"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@color/customBlue"
        android:onClick="createSet"
        android:text="@string/createSet"
        android:textColor="@color/white"
        android:width="250dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/achievementsImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            android:contentDescription="@string/achievementsImageButton"
            android:src="@drawable/ic_achievements" />

        <ImageButton
            android:id="@+id/leaderboardImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/leaderboardsImageButton"
            android:src="@drawable/ic_leaderboard" />
    </LinearLayout>

</LinearLayout>