<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="true"
    android:gravity="top|center"
    android:orientation="vertical"
    tools:context=".GameOverActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/gameOver_scoreLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/gameOverScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:width="250dp"
        android:layout_marginBottom="20dp"
        android:text="@string/gameOver_playAgain"
        android:textColor="@color/white" 
        android:background="@color/customBlue" />

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:width="250dp"
        android:text="@string/gameOver_mainMenu"
        android:textColor="@color/white" 
        android:background="@color/customBlue" />

</LinearLayout>
